# Deplieur3D-CPP

./: CMakeLists.txt  LICENSE  README.md  depliage.cpp  depliage.h  depliagescene.cpp  depliagescene.h  depliagevue2d.cpp  depliagevue2d.h  depliagevue3d.cpp  depliagevue3d.h  deplieurscene.cpp  deplieurscene.h  facette.cpp  facette.h  filedownloader.cpp  filedownloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mat4x4.cpp  mat4x4.h  mesh.cpp  mesh.h  numitem.cpp  numitem.h  piecelangitem.cpp  piecelangitem.h  pieceligneitem.cpp  pieceligneitem.h  piecenumitem.cpp  piecenumitem.h  piecepolygonitem.cpp  piecepolygonitem.h  resources.qrc  structures.cpp  structures.h  svg.hpp  triangle2d.cpp  (+15 more)
